# rito

./: readme.md
RosWeb/: App.js  app.json  index.html  listas.html  mapa.html  package-lock.json  package.json  perfil.html  productos.html
RosWeb/JS/: carrito.js  const.js  index.js  listas.js  login.js  perfil.js  productos.js  robot.js  robot_move.js  search.js
RosWeb/css/: global.css  index.css  listas.css  mapa.css  perfil.css  productos.css
RosWeb/navigation/: tabs.js
RosWeb/screens/: InicioScreen.js  ListasScreen.js  PerfilScreen.js  ProductosScreen.js  RitoScreen.js
catkin_ws/devel/include/turtlebot3_example/: Turtlebot3Action.h  Turtlebot3ActionFeedback.h  Turtlebot3ActionGoal.h  Turtlebot3ActionResult.h  Turtlebot3Feedback.h  Turtlebot3Goal.h  Turtlebot3Result.h
catkin_ws/devel/include/turtlebot3_msgs/: SensorState.h  Sound.h  VersionInfo.h
catkin_ws/devel/lib/pkgconfig/: get_map_data.pc  moving_topic.pc  my_first_gazebo_world.pc  provide_map.pc  rito_navigation_stack.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
catkin_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
catkin_ws/devel/lib/turtlebot3_fake/: turtlebot3_fake_node
catkin_ws/devel/lib/turtlebot3_gazebo/: turtlebot3_drive
catkin_ws/devel/lib/turtlebot3_slam/: flat_world_imu_node
catkin_ws/devel/share/get_map_data/cmake/: get_map_data-msg-extras.cmake  get_map_data-msg-paths.cmake  get_map_dataConfig.cmake
catkin_ws/devel/share/moving_topic/cmake/: moving_topicConfig.cmake
catkin_ws/devel/share/my_first_gazebo_world/cmake/: my_first_gazebo_worldConfig.cmake
catkin_ws/devel/share/provide_map/cmake/: provide_mapConfig.cmake
catkin_ws/devel/share/rito_navigation_stack/cmake/: rito_navigation_stackConfig.cmake
catkin_ws/devel/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
catkin_ws/devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
catkin_ws/devel/share/turtlebot3_example/cmake/: turtlebot3_example-msg-extras.cmake  turtlebot3_example-msg-paths.cmake  turtlebot3_exampleConfig.cmake
catkin_ws/devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
catkin_ws/devel/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
catkin_ws/devel/share/turtlebot3_msgs/cmake/: turtlebot3_msgs-msg-paths.cmake  turtlebot3_msgsConfig.cmake
catkin_ws/src/get_map_data/: CMakeLists.txt  package.xml
catkin_ws/src/get_map_data/src/: call_map_service.py
catkin_ws/src/moving_topic/: CMakeLists.txt  move_topic.launch  move_topic_publisher.py
catkin_ws/src/my_first_gazebo_world/: CMakeLists.txt  package.xml
catkin_ws/src/my_first_gazebo_world/launch/: turtlebot3_my_world.launch
catkin_ws/src/rito_navigation_stack/launch/: rito_navigation_stack.launch
maps/: tb3_supermarket_map.yaml
my_first_rosweb/: index.html  main.js
rito/: CMakeLists.txt  package.xml
rito/rito/: CMakeLists.txt  package.xml
rito/rito_navigation_stack/: package.xml
rito/rito_navigation_stack/launch/: rito_navigation_stack.launch
rito/rito_navigation_stack/maps/: tb3_supermarket_map.pgm
rito/rito_navigation_stack/rviz/: rito_config.rviz
rito/rito_navigation_stack/worlds/: rito_supermarket_world.world
rito/rito_navigation_stack_real/launch/: rito_navigation_stack_real.launch
rito/rito_navigation_stack_real/maps/: rito_supermarket.yaml.pgm
rito/rito_navigation_stack_real/param/: costmap_common_params_burger.yaml  local_costmap_params.yaml
rito/rito_provide_map/: CMakeLists.txt  package.xml
rito/rito_provide_map/launch/: rito_provide_map.launch
rito/rito_state_machine/: CMakeLists.txt  package.xml
rito/rito_state_machine_msg/: CMakeLists.txt  package.xml
rito/rito_state_machine_msg/srv/: RitoServiceMessage.srv
rito/rito_state_machine_real_service/: CMakeLists.txt  package.xml
rito/rito_state_machine_real_service/launch/: rito_state_machine_real_service.launch
rito/rito_state_machine_real_service/src/: rito_state_machine_real_service.py
rito/rito_state_machine_service/: CMakeLists.txt  package.xml
rito/rito_state_machine_service/src/: .rito_state_machine_service.py.kate-swp  rito_state_machine_service.py
rito_srv/: README.md  package-lock.json  package.json
rito_srv/config/: default.json  production.json
rito_srv/db/: lists  users
rito_srv/src/models/: cart.model.js  examples-api-calls  lists.model.js  products.model.js  ritos.model.js  users.model.js
rito_srv/src/services/: index.js
rito_srv/src/services/lists/: lists.hooks.js
rito_srv/src/services/ritos/: ritos.class.js  ritos.service.js
rito_srv/test/services/: ritos.test.js
src/maquina_estado_rito/: CMakeLists.txt  package.xml
src/maquina_estado_rito/launch/: maquina_estado_rito.launch
src/maquina_estado_rito/src/: maquina_estado.py
src/provide_map/: package.xml
src/provide_map/launch/: provide_map.launch
src/rito_navigation_stack/: CMakeLists.txt
src/rito_navigation_stack/launch/: rito_navigation_stack.launch
src/rito_navigation_stack/worlds/: rito_supermarket_world.world
src/rito_navigation_stack_real/: CMakeLists.txt  package.xml
src/rito_navigation_stack_real/launch/: rito_navigation_stack_real.launch
src/rito_navigation_stack_real/maps/: rito_supermarket.yaml.yaml
src/rito_state_machine/launch/: rito_state_machine.launch
src/rito_state_machine/src/: rito_state_machine.py
src/rito_state_machine/test/: run_tests.py  test_cases_rotate_robot.py
src/rito_state_machine_service/: CMakeLists.txt  package.xml
src/rito_state_machine_service/launch/: rito_state_machine_service.launch
src/rito_state_machine_service/src/: rito_state_machine_service.py
waypoints/: centro.sh
(+8 files in other folders)
