<?xml version="1.0"?>
<package format="2">
  <name>NOMBRE_DEL_METAPACKAGE</name>
  <version>1.2.1</version>
  <description> ROS packages for the XXXX (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="usr@epsg.upv.es">Pyo</author>
  <maintainer email="usr@epsg.upv.es">Pyo</maintainer>
<url type="website">http://xxx </url>   
<url type="repository">https://github.com/URL_DEL_REPOSITORIO</url>
<buildtool_depend>catkin</buildtool_depend>
  <exec_depend>Nombre_del_paquete1</exec_depend>
  <exec_depend> Nombre_del_paquete2</exec_depend>
  <exec_depend> Nombre_del_paquete3</exec_depend>
<export><metapackage/></export>
</package>