<?xml version="1.0"?>
<package format="2">
  <name>rito</name>
  <version>1.2.1</version>
  <description> ROS packages for Rito
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="marolca2@epsg.upv.es">Pyo</author>
  <maintainer email="marolca2@epsg.upv.es">Pyo</maintainer>
<url type="website">http://www.upv.es </url>   
<url type="repository">https://github.com/Grupo03Robotica/rito</url>
<buildtool_depend>catkin</buildtool_depend>
  <exec_depend>Nombre_del_paquete1</exec_depend>
  <exec_depend>Nombre_del_paquete2</exec_depend>
  <exec_depend>Nombre_del_paquete3</exec_depend>
<export><metapackage/></export>
</package>