<?xml version="1.0"?>
<package format="2">
  <name>rito_state_machine_service</name>
  <version>0.0.0</version>
  <description>The rito_state_machine_service package</description>

  <maintainer email="a@todo.todo">a</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>rito_state_machine_msg</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_export_depend>rito_state_machine_msg</build_export_depend>
  <exec_depend>rito_state_machine_msg</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
